Fix ColorModifier not working I guess I just overcomplicated the stuff Also added simple hex color format